--- a/src/main/resources/public/joinTheGroup.html
+++ b/src/main/resources/public/joinTheGroup.html
@@ -94,7 +94,7 @@
                             $.ajax({
                                 method: 'delete',
                                 url: `/api/passenger/${passenger.id}`,
-                                success: loadPassengers
+                                success: loadParticipants()
                             });
                         });
 
