--- a/src/main/resources/public/startAGroup.html
+++ b/src/main/resources/public/startAGroup.html
@@ -22,7 +22,8 @@
             <label for="groupName">Name of group of people joining the GPS tracking:</label>
             <input class="form-control" id="groupName" name="groupName"/>
         </div>
-        <input type="submit" class="btn btn-primary" value="Create">
+        <input type="submit" class="btn btn-primary" value="CREATE">
+        <button type="button" class="btn btn-success" onclick="window.location.href='/index.html'">GO BACK</button>
     </form>
 </div>
 
