--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Welcome to flights Application</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"/>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+
 </head>
+
 <body>
-<h1> Welcome to GPS Trackers</h1>
 
 
-<p>click <a href="startAGroup.html"> here </a> to start a new Group</p>
-<p>click <a href="joinTheGroup.html"> here </a> to become part of an existing Group</p>
+<div class = "container">
+    <h1> Welcome to GPS Trackers</h1>
+    <p> <button type="button" class="btn btn-primary" onclick="window.location.href='/startAGroup.html'">START NEW TRACKING GROUP</button> </p>
+    <p> <button type="button" class="btn btn-success" onclick="window.location.href='/joinTheGroup.html'">JOIN TRACKING GROUP</button> </p>
+    <p> <button type="button" class="btn btn-warning" onclick="window.location.href='/pictureOfGrandma.html'">looking for my grandma</button> </p>
+</div>
+
 </body>
 </html>
